CSS/style.css
* {
  padding: 0;
  margin: 0;
}
body{
  background-color: #000;
}

.main{
  position: fixed;
  top: 50%;
  left: 50%;
  height: 1px;
  width: 1px;
  background-color: #fff;
  border-radius: 50%;
  box-shadow: -24vw -44vh 2px 2px #fff,38vw -4vh 0px 0px #fff,-20vw -48vh 1px 2px #fff,-39vw 38vh 3px 1px #fff,-42vw -11vh 0px 3px #fff,12vw 15vh 3px 3px #fff,42vw 6vh 3px 2px #fff,-8vw 9vh 0px 2px #fff,34vw -38vh 1px 0px #fff,-17vw 45vh 3px 1px #fff,22vw -36vh 3px 2px #fff,-42vw 1vh 1px 0px #fff;
  animation: zoom 10s alternate infinite;
}

@keyframes zoom {
  0%{
      transform: scale(1);
  }
  100%{
      transform: scale(1.5);
  }
}
#home {
  display: flex;
  justify-content: center;
  align-items: center;
}

#home-container {
  min-height: 100vh;
  zoom: 185%;
  display: flex;
  align-items: center;
  flex-direction: column;
  justify-content: flex-start;
}

#home-box {
  margin-bottom: 830px;
  width: 500px;
  display: flex;
  align-items: center;
  flex-direction: column;
}

.container-button {
  width: 35%;
}

.container-info {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  flex-direction: column;
  width: 100%;
}

.home-button {
  display: flex;
  justify-content: center;
  margin-top: 40px;
  height: 60px;
  border: 1px;
  border-color: white;
  border-style: solid;
  border-radius: 6px;
  width: 100%;
  cursor: pointer;
}

.home-button:hover {
  transition: 0.2s;
  background-color: #fff;
  color: #000;
}

.text {
  text-decoration: none;
  font-family: sans-serif;
  color: white;
  display: flex;
  align-items: center;
  justify-content: center;
}

#image {
  width: 150px;
  height: 150px;
  object-fit: cover;
  border-radius: 60%;
}

.text-style {
  font-family: sans-serif;
  color: white;
}

#box-name-and-img {
  max-width: 150px;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}

.text-info {
  line-height: 0px;
  width: 200px;
  display: flex;
  align-items: center;
  justify-content: center;
  flex-direction: column;
}
p {
  margin-top: 10px;
}

